--- a/demo/src/main/res/layout/main.xml
+++ b/demo/src/main/res/layout/main.xml
@@ -66,6 +66,11 @@
             android:text="Text dialog (password)" />
 
         <Button
+            android:id="@+id/text_pattern_picker"
+            style="@style/Button"
+            android:text="Text dialog (pattern)" />
+
+        <Button
             android:id="@+id/custom_dialog"
             style="@style/Button"
             android:layout_marginBottom="@dimen/grid_3"
