Added sample using digits attribute for IPv4 input

--- a/demo/src/main/res/layout/main.xml
+++ b/demo/src/main/res/layout/main.xml
@@ -66,6 +66,11 @@
             android:text="Text dialog (password)" />
 
         <Button
+            android:id="@+id/ip_address_picker"
+            style="@style/Button"
+            android:text="IPv4 address picker" />
+
+        <Button
             android:id="@+id/number_picker"
             style="@style/Button"
             android:text="Number picker" />
